--- a/_GitBook/_bookdown.yml
+++ b/_GitBook/_bookdown.yml
@@ -1,7 +1,8 @@
 book_filename: "Intro_R_Workshop"
 chapter_name: "Chapter "
-repo: https://github.com/robwschlegel/Intro_R_Workshop
+repo: https://github.com/ajsmit/Intro_R_Official
 output_dir: ../docs
 rmd_files: ["index.Rmd", "01-prelim.Rmd", "02-RStudio.Rmd", "03-workflow.Rmd", "04-graphics.Rmd", "05-faceting.Rmd", "06-brewing.Rmd", "07-mapping.Rmd", "08-mapping_style.Rmd", "09-mapping_google.Rmd", "10-tidy.Rmd", "11-tidier.Rmd", "12-tidiest.Rmd", "13-recap.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
+delete_merged_file: true
